<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize"
    tools:context=".ui.tabs.TabCordFragment">

    <TextView
        android:id="@+id/cord_first_category_text"
        style="@style/tab_fragment_category_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cord_first_category_text"
        app:layout_constraintBottom_toTopOf="@+id/cord_second_category_text"
        app:layout_constraintEnd_toStartOf="@+id/cord_first_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cord_first_price"
        style="@style/tab_fragment_edit_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_field_hint"
        android:paddingStart="@dimen/small_value"
        android:paddingEnd="@dimen/small_value"
        android:text="0.00"
        app:layout_constraintBottom_toBottomOf="@+id/cord_first_category_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cord_first_category_text"
        app:layout_constraintTop_toTopOf="@+id/cord_first_category_text" />

    <TextView
        android:id="@+id/cord_second_category_text"
        style="@style/tab_fragment_category_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cord_second_category_text"
        app:layout_constraintBottom_toTopOf="@+id/cord_third_category_text"
        app:layout_constraintEnd_toStartOf="@+id/cord_second_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cord_first_category_text" />

    <EditText
        android:id="@+id/cord_second_price"
        style="@style/tab_fragment_edit_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_field_hint"
        android:paddingStart="@dimen/small_value"
        android:paddingEnd="@dimen/small_value"
        android:text="0.00"
        app:layout_constraintBottom_toBottomOf="@+id/cord_second_category_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cord_second_category_text"
        app:layout_constraintTop_toTopOf="@+id/cord_second_category_text" />

    <TextView
        android:id="@+id/cord_third_category_text"
        style="@style/tab_fragment_category_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cord_third_category_text"
        app:layout_constraintBottom_toTopOf="@+id/cord_fourth_category_text"
        app:layout_constraintEnd_toStartOf="@+id/cord_third_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cord_second_category_text" />

    <EditText
        android:id="@+id/cord_third_price"
        style="@style/tab_fragment_edit_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_field_hint"
        android:paddingStart="@dimen/small_value"
        android:paddingEnd="@dimen/small_value"
        android:text="0.00"
        app:layout_constraintBottom_toBottomOf="@+id/cord_third_category_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cord_third_category_text"
        app:layout_constraintTop_toTopOf="@+id/cord_third_category_text" />

    <TextView
        android:id="@+id/cord_fourth_category_text"
        style="@style/tab_fragment_category_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cord_fourth_category_text"
        app:layout_constraintBottom_toTopOf="@+id/cord_fifth_category_text"
        app:layout_constraintEnd_toStartOf="@+id/cord_fourth_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cord_third_category_text" />

    <EditText
        android:id="@+id/cord_fourth_price"
        style="@style/tab_fragment_edit_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_field_hint"
        android:paddingStart="@dimen/small_value"
        android:paddingEnd="@dimen/small_value"
        android:text="0.00"
        app:layout_constraintBottom_toBottomOf="@+id/cord_fourth_category_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cord_fourth_category_text"
        app:layout_constraintTop_toTopOf="@+id/cord_fourth_category_text" />

    <TextView
        android:id="@+id/cord_fifth_category_text"
        style="@style/tab_fragment_category_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cord_fifth_category_text"
        app:layout_constraintBottom_toTopOf="@+id/cord_sixth_category_text"
        app:layout_constraintEnd_toStartOf="@+id/cord_fifth_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cord_fourth_category_text" />

    <EditText
        android:id="@+id/cord_fifth_price"
        style="@style/tab_fragment_edit_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_field_hint"
        android:paddingStart="@dimen/small_value"
        android:paddingEnd="@dimen/small_value"
        android:text="0.00"
        app:layout_constraintBottom_toBottomOf="@+id/cord_fifth_category_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cord_fifth_category_text"
        app:layout_constraintTop_toTopOf="@+id/cord_fifth_category_text" />

    <TextView
        android:id="@+id/cord_sixth_category_text"
        style="@style/tab_fragment_category_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cord_sixth_category_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cord_sixth_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cord_fifth_category_text" />

    <EditText
        android:id="@+id/cord_sixth_price"
        style="@style/tab_fragment_edit_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_field_hint"
        android:paddingStart="@dimen/small_value"
        android:paddingEnd="@dimen/small_value"
        android:text="0.00"
        app:layout_constraintBottom_toBottomOf="@+id/cord_sixth_category_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cord_sixth_category_text"
        app:layout_constraintTop_toTopOf="@+id/cord_sixth_category_text" />

</androidx.constraintlayout.widget.ConstraintLayout>