<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tabs.TabMacrameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/macrame_first_category_text"
            style="@style/tab_fragment_category_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macrame_first_category_text"
            app:layout_constraintBottom_toBottomOf="@+id/macrame_first_price"
            app:layout_constraintEnd_toStartOf="@+id/macrame_first_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/macrame_first_price" />

        <EditText
            android:id="@+id/macrame_first_price"
            style="@style/tab_fragment_edit_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_value"
            android:hint="@string/edit_text_field_hint"
            android:paddingStart="@dimen/small_value"
            android:paddingEnd="@dimen/small_value"
            android:text="0.00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/macrame_first_category_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/macrame_second_category_text"
            style="@style/tab_fragment_category_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macrame_second_category_text"
            app:layout_constraintBottom_toBottomOf="@+id/macrame_second_price"
            app:layout_constraintStart_toStartOf="@+id/macrame_first_category_text"
            app:layout_constraintTop_toTopOf="@+id/macrame_second_price" />

        <EditText
            android:id="@+id/macrame_second_price"
            style="@style/tab_fragment_edit_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_value"
            android:hint="@string/edit_text_field_hint"
            android:paddingStart="@dimen/small_value"
            android:paddingEnd="@dimen/small_value"
            android:text="0.00"
            app:layout_constraintEnd_toEndOf="@+id/macrame_first_price"
            app:layout_constraintStart_toStartOf="@+id/macrame_first_price"
            app:layout_constraintTop_toBottomOf="@+id/macrame_first_price" />

        <TextView
            android:id="@+id/macrame_third_category_text"
            style="@style/tab_fragment_category_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macrame_third_category_text"
            app:layout_constraintBottom_toBottomOf="@+id/macrame_third_price"
            app:layout_constraintStart_toStartOf="@+id/macrame_second_category_text"
            app:layout_constraintTop_toTopOf="@+id/macrame_third_price" />

        <EditText
            android:id="@+id/macrame_third_price"
            style="@style/tab_fragment_edit_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_value"
            android:hint="@string/edit_text_field_hint"
            android:paddingStart="@dimen/small_value"
            android:paddingEnd="@dimen/small_value"
            android:text="0.00"
            app:layout_constraintEnd_toEndOf="@+id/macrame_second_price"
            app:layout_constraintStart_toStartOf="@+id/macrame_second_price"
            app:layout_constraintTop_toBottomOf="@+id/macrame_second_price" />

        <TextView
            android:id="@+id/macrame_fourth_category_text"
            style="@style/tab_fragment_category_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macrame_fourth_category_text"
            app:layout_constraintBottom_toBottomOf="@+id/macrame_fourth_price"
            app:layout_constraintStart_toStartOf="@+id/macrame_third_category_text"
            app:layout_constraintTop_toTopOf="@+id/macrame_fourth_price" />

        <EditText
            android:id="@+id/macrame_fourth_price"
            style="@style/tab_fragment_edit_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_value"
            android:layout_marginBottom="@dimen/big_value"
            android:hint="@string/edit_text_field_hint"
            android:paddingStart="@dimen/small_value"
            android:paddingEnd="@dimen/small_value"
            android:text="0.00"
            app:layout_constraintEnd_toEndOf="@+id/macrame_third_price"
            app:layout_constraintStart_toStartOf="@+id/macrame_third_price"
            app:layout_constraintTop_toBottomOf="@+id/macrame_third_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>